--- a/NewYorker.html
+++ b/NewYorker.html
@@ -11,7 +11,7 @@
             <div id="header">
                 <h4 align="center">THE</h4>
                 <h1 align="center">NEW YORKER</h1>
-                <h2 align="center">DOES JOURNALISM HAVE A FUTURE</h2>
+                <h2 align="center">DOES JOURNALISM HAVE A FUTURE?</h2>
                 <p align="center"><i>In an era of social media and fake news, journalists who have survived the print plunge have new foes to face.</i></p>
                 <h4 align="center">By Jill Lepore</h4>
             </div >
