--- a/NewYorker.html
+++ b/NewYorker.html
@@ -16,7 +16,7 @@
                 <h4 align="center">By Jill Lepore</h4>
             </div >
             <div id="illustration" align="center" class="images">
-                <img src="190128_r33628.jpg">
+                <img src="https://raw.githubusercontent.com/saramadonia/IMWT-exercises/main/190128_r33628.jpg" align="center">
                 <p align="center">The more desperately the press chases readers, the more it resembles our politics. Illustration by Erik Carter</p>
             </div>
             <div id="content">
